Frontend adds member info to database, sets Wild Apricot ID, sets RFID, activates everything. Fix a bunch of backend bugs found along the way.
